--- a/package.json
+++ b/package.json
@@ -3,7 +3,9 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "cypress:open": "cypress open",
+    "cypress:ci": "cypress run"
   },
   "author": "",
   "license": "ISC",
@@ -13,4 +15,6 @@
     "cypress": "^13.7.3",
     "joi": "^17.12.3"
   }
+
+
 }
